<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.auth.SignFragment">

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText=""
        app:helperTextTextAppearance="@font/aref_ruqa_regular"
        app:helperTextTextColor="@color/error_color"
        android:hint="البريد الإلكتروني"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/userame_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:hint="اسم المستخدم"
        app:helperTextTextColor="@color/error_color"
        android:gravity="right"
        app:helperTextTextAppearance="@font/arefruqaa"
        app:helperText=""
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:helperText=""
        app:helperTextTextColor="@color/error_color"
        app:passwordToggleEnabled="true"
        android:hint="كلمة المرور"
        android:gravity="right"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_menu"
        android:paddingTop="10dp"
        app:helperTextTextColor="@color/error_color"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        app:helperText=""
        android:layout_height="wrap_content"
        android:hint="الجنس">

        <AutoCompleteTextView
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_sign"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:backgroundTint="@color/second_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="انشاء حساب"
        android:textColor="@color/primary_color"
        android:background="@drawable/shape_bkg"
        />

</LinearLayout>