...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"


        android:id="@+id/fragment_login"
    tools:context=".view.auth.LoginFragment">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@color/error_color"
        android:hint="البريد الإلكتروني"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

...
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@color/error_color"
        android:paddingTop="10dp"
        android:hint="كلمة المرور"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
...
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/amiri_regular"
        android:text=" نسيت كلمة المرور ؟"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:backgroundTint="@color/second_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
...
