<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.search.SearchFragment">

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_bkg"
        android:drawableRight="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:hint="بحث..."
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:textColor="@color/gray"

        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/primary_color"
        app:layout_constraintBottom_toTopOf="@+id/list_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/gray_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />



</androidx.constraintlayout.widget.ConstraintLayout>