...
                >
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    tools:ignore="UselessParent">
                    <Button
                        android:id="@+id/go_to_signup"
                        android:text="@string/create_account"
                        android:textColor="@color/primary_color"
                        android:textStyle="bold"
                        android:layout_column="0"
                        android:layout_marginTop="-4dp"
                        android:layout_marginBottom="-4dp"
...
                </TableRow>
            </TableLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/auth_fragment"/>

        </LinearLayout>




...
